# scripts

./: .gitignore  CONVENTIONS.md  pyproject.toml  readme.md  requirements.txt
actual_budget_importer/: firefly_client.py  main.py  pyproject.toml
actual_budget_importer/tests/: tests.py
bank_statement_transformer/: README.md  main.py  pyproject.toml  types.py
bank_statement_transformer/tests/: tests.py
bank_statement_transformer/transformers/: hdfc_bank_statement_csv.py  icici_credit_card_statement_csv.py
omnivore_auto_tag/: main.py
quote_walls/: README.md  main.py  pyproject.toml
tata_1mg_exporter/: main.py  pyproject.toml  readme.md
tpb_downloader/: main.py
voice_notes/: main.py
zostel_finder/: main.py  pyproject.toml  readme.md
