[project]
name = "tata-1mg-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache>=5.6.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
    "streamlit>=1.40.1",
    "typer>=0.12.5",
]
